# emotion-visualisation

./: .gitignore  README.md  docker-compose.yaml  nx.json  package-lock.json  package.json
api/: .dockerignore  dockerfile  project.json  pyproject.toml  requirements.txt
api/api/: __init__.py  api_models.py  dataset.py  hello.py  models.py
front/: dockerfile  project.json  tailwind.config.js  vite.config.ts
front/src/: consts.ts  styles.css  utils.ts
front/src/app/: app.spec.tsx  app.tsx
front/src/components/: Canvas2D.tsx  Canvas3D.tsx  CanvasPCA.tsx  IndividualAnalysis.tsx  Legend.tsx  Navbar.tsx  PromptBar.tsx  ThemeToggle.tsx  Tooltip.tsx  Welcome.tsx
front/src/legacy/: Canvas2D_no_konva.tsx  Canvas2D_recharts.tsx
