[tool.coverage.run]
branch = true
source = [ "api" ]

[tool.coverage.report]
exclude_lines = ['if TYPE_CHECKING:']
show_missing = true

[tool.pytest.ini_options]
addopts = "--cov --cov-report html:'../coverage/./api/html' --cov-report xml:'../coverage/./api/coverage.xml' --html='../reports/./api/unittests/html/index.html' --junitxml='../reports/./api/unittests/junit.xml'"

[tool.poetry]
name = "api"
version = "1.0.0"
description = "Emotion visualisation backend"
authors = [ ]
license = 'Proprietary'
readme = 'README.md'

  [[tool.poetry.packages]]
  include = "api"

  [tool.poetry.dependencies]
  python = ">=3.9"
  fastapi = "^0.104.0"
  uvicorn = {extras = ["standard"], version = "^0.23.2"}
  transformers = "^4.34.1"
  torch = "^2.1.0"

  [tool.poetry.group.dev.dependencies]
  autopep8 = "2.0.2"
  flake8 = "6.0.0"
  pytest = "7.3.1"
  pytest-sugar = "0.9.7"
  pytest-cov = "4.1.0"
  pytest-html = "3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
